--- a/eksctl_config.yaml
+++ b/eksctl_config.yaml
@@ -1,6 +1,3 @@
-#eksctl get nodegroups --profile ekspangeo --region us-west-2 --cluster=pangeo
-#eksctl create nodegroup --profile ekspangeo --config-file eksctl_config.yaml --only=notebooks
-#eksctl delete nodegroup --profile ekspangeo --region us-west-2 --cluster=pangeo --name=notebooks --update-auth-configmap=False
 apiVersion: eksctl.io/v1alpha4
 kind: ClusterConfig
 
@@ -8,18 +5,30 @@ metadata:
   name: pangeo
   profile: circleci
   region: us-west-2
-  updateAuthConfigmap: False
+  updateAuthConfigmap: True
 
 nodeGroups:
-  - name: hubs
+  - name: hub
     instanceType: m5.large
     allowSSH: true
     sshPublicKeyPath: "./pangeo-access-us-west-2.pub"
-  - name: test
+  - name: user-notebook
     instanceType: m5.2xlarge
     minSize: 0
-    maxSize: 100
-    desiredCapacity: 1
+    maxSize: 20
+    desiredCapacity: 0
+    allowSSH: true
+    sshPublicKeyPath: "./pangeo-access-us-west-2.pub"
+    ami: auto
+    amiFamily: AmazonLinux2
+    iam:
+        withAddonPolicies:
+            autoScaler: true
+  - name: dask-worker
+    instanceType: r5.2xlarge
+    minSize: 0
+    maxSize: 20
+    desiredCapacity: 0
     allowSSH: true
     sshPublicKeyPath: "./pangeo-access-us-west-2.pub"
     ami: auto
